# CPP_Phase3_client

./: CMakeLists.txt  README.md  client.cpp  client.h  gui.cpp  gui.h  main.cpp  qml.qrc
qml/: AddComView.qml  AddExpressmanView.qml  AdminSearch.qml  AdminView.qml  AllItemIcon.qml  AllItemView.qml  AllUserView.qml  AssignView.qml  BannerText.qml  CartView.qml  ComView.qml  CusTextField.qml  CustomerView.qml  DiscountView.qml  EditComView.qml  ExpressItemIcon.qml  ExpressSearch.qml  ExpressmanView.qml  ItemArea.qml  ItemInfoView.qml  LoginView.qml  MainView.qml  MyChargeView.qml  MyReceiveView.qml  MySendView.qml  OrderListView.qml  OrderView.qml  ReceiveItemIcon.qml  ReceiveSearch.qml  RegisterView.qml  RegularText.qml  SearchResultView.qml  SearchView.qml  SendItemIcon.qml  SendItemView.qml  SendSearch.qml  TextDialog.qml  Time.qml  UserInfoView.qml  UserView.qml  (+1 more)
